# inmoov_ros

./: .gitignore  README.md
inmoov_bringup/: CMakeLists.txt  LICENSE.txt  package.xml
inmoov_bringup/config/: config.xacro  config.yaml  export.yaml
inmoov_bringup/examples/: blank.yaml  grey.yaml
inmoov_bringup/include/: constants.py  export_yaml.py  load_config_from_param.py  servos.py
inmoov_bringup/launch/: bringup.launch
inmoov_bringup/nodes/: join_state_dispatcher.py  joint_command_dispatcher.py  joint_state_dispatcher.py  joint_status_dispatcher.py  motor_status_dispatcher.py  rviz_command_dispatcher.py  smartservo_status_dispatcher.py
inmoov_bringup/scripts/: generate_config_xacro.py  generate_export_yaml.py  generate_export_yaml_from_eeprom.py
inmoov_bringup/tools/: enabler.py
inmoov_description/: CMakeLists.txt  display.launch  launch_rviz.sh  package.xml  urdf.rviz
inmoov_description/launch/: display.launch  gazebo.launch  moveit-display.launch
inmoov_description/meshes/: camera.stl  chest.stl  disk.stl  earleftv1.stl  earrightv1.stl  eye.stl  eyesupport.stl  face.stl  head.stl  head_base.stl  iris.stl  jaw.stl  left_cover_hand.stl  left_cover_middle.stl  left_cover_pinky.stl  left_cover_thumb.stl  left_eyesupport.stl  left_forearm.stl  left_hand.stl  left_shoulder.stl  left_shoulder_base.stl  left_thumb5_1.stl  mid_stomach.stl  middle3_1.stl  pinky3_2.stl  pinky3_3.stl  right_cover_hand.stl  right_cover_handpinky.stl  right_cover_index.stl  right_cover_pinky.stl  right_cover_ring.stl  right_cover_thumb.stl  right_eyesupport.stl  right_forearm.stl  right_pinky3_1.stl  right_shoulder.stl  right_shoulder_base.stl  ring3_2.stl  ring3_3.stl  ring3_4.stl  (+4 more)
inmoov_description/robots/: OG_inmoov.urdf  hand.urdf  inmoov.urdf  inmoov.urdf.xacro  inmoov.urdf.xacro~  inmoov_face.urdf  inmoov_face.urdf.xacro  inmoov_face.urdf.xacro~  inmoov_head.urdf  inmoov_head.urdf.xacro  inmoov_head.urdf.xacro~  inmoov_right_hand.urdf  inmoov_right_hand.urdf.xacro  inmoov_right_hand.urdf.xacro~  refactor.urdf  refactor.urdf.xacro
inmoov_description/urdf/: asmArm.urdf.xacro  asmBase.urdf.xacro  asmEye.urdf.xacro  asmFace.urdf.xacro  asmFace.urdf.xacro~  (+11 more)
inmoov_firmware/: CMakeLists.txt  TeensyServo.cpp  TeensyServo.h  configuration.h  inmoov_firmware.ino  package.xml
inmoov_meshes/: CMakeLists.txt  LICENSE.txt  package.xml
inmoov_messages/: package.xml
inmoov_msgs/: CMakeLists.txt  package.xml
inmoov_msgs/msg/: MotorCommand.msg  MotorStatus.msg  SmartServoStatus.msg
inmoov_servobrain/: CMakeLists.txt  package.xml
inmoov_tools/: CMakeLists.txt  package.xml  setup_parameters.py
robot_editor/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE.txt  Makefile  README.md  README.md~  cmake_install.cmake  package.xml  ui_main_window.h
robot_editor/src/: main.cpp  moc_robot_editor.cxx  moc_robot_editor.cxx_parameters  moc_robot_preview.cxx  moc_robot_preview.cxx_parameters  robot_editor.cpp  robot_editor.cpp~  robot_editor.h  robot_preview.cpp  robot_preview.cpp~  robot_preview.h
robot_editor/ui/: main_window.ui  main_window.ui~
(+141 files in other folders)
